# nwm-verf

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  config.yaml  config_fs.yaml  pyproject.toml  setup.cfg  setup.py  verification.py  version.txt
.github/workflows/: ci-cd.yml
data/configs/: config_hindcast.yaml  config_ngencerf.yaml  config_ngensim.yaml  config_nwm.yaml
data/inputs/: nwm_forecast_configuration.yaml
data/inputs/gage_files/: gage_hydrofabric_all_domains.parquet  usgs_gage_link_all_AK.tsv  usgs_gage_link_all_PR.tsv  usgs_gages_link_CONUS_calib100.csv  usgs_ngen_crosswalk_all_domains.parquet  usgs_nwm30_crosswalk_all_domains.parquet
data/inputs/regionalization/: gage_list_conus_vpu_01.csv  gage_list_conus_vpu_02.csv  gage_list_conus_vpu_03N.csv  gage_list_conus_vpu_03S.csv  gage_list_conus_vpu_03W.csv  gage_list_conus_vpu_04.csv  gage_list_conus_vpu_05.csv  gage_list_conus_vpu_06.csv  gage_list_conus_vpu_07.csv  gage_list_conus_vpu_08.csv  gage_list_conus_vpu_09.csv  gage_list_conus_vpu_10L.csv  gage_list_conus_vpu_10U.csv  gage_list_conus_vpu_11.csv  gage_list_conus_vpu_12.csv  gage_list_conus_vpu_13.csv  gage_list_conus_vpu_14.csv  gage_list_conus_vpu_15.csv  gage_list_conus_vpu_16.csv  gage_list_conus_vpu_17.csv  gage_list_conus_vpu_18.txt  usgs_ngen_crosswalk_conus.parquet
data/inputs/usgs_01123000/noah_cfes/: long_range_mem1.csv  medium_range_alaska_mem6.csv  medium_range_blend.csv  short_range.csv  short_range_alaska_1.csv  short_range_alaska_2.csv  short_range_hawaii.csv  short_range_puertorico.csv
docker/: run-ngen-verf.sh  run-nwm-verf.sh
sample_files/: config.yaml
sample_files/gage_files/: gages_metadata_all_domains.csv  usgs_gage_link_all_CONUS.tsv  usgs_gage_link_all_HI.tsv  usgs_gages_link_CONUS_calib100.csv  usgs_nwm30_crosswalk_CONUS.parquet  usgs_nwm30_crosswalk_all_domains.parquet  usgs_point_geometry_CONUS.parquet  usgs_point_geometry_all_domains_copy.parquet
src/ngen/verf/: calc_lead_times.py  calc_metrics.py  configuration.py  create_plots.py  fetch_data.py  identify_location_ids.py  nwm_configs.py  pair_data.py  settings.py  utils.py
src/nwm/verf/: __main__.py  calc_lead_times.py  calc_metrics.py  calc_metrics.py.copy  configuration.py  create_plots.py  fetch_data.py  identify_location_ids.py  logging_utils.py  nwm_configs.py  pair_data.py  process_config.py  settings.py  utils.py
utils/: config_tmp.yaml  create_crosswalk.py  create_geometry.py  create_ngen_crosswalk_nhf.py  create_ngen_crosswalk_regionalization.py  create_pseudo_fcst_data.py  download_nhf_gpkg.sh  funcs_ngen_verf_demo.py  ngen_verf_demo.ipynb  out1  read_troute_flow.py  run_verf_all_configs.py
