[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[project]
name = "nwm.verf"
version = "1.0.0"
description = "A python library to perform verification for NWM forecasts"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Yuqiong Liu", email = "Yuqiong.Liu@ertcorp.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: Free To Use But Restricted",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Operating System :: OS Independent",
]
dependencies = [
    "dask",
    "geopandas~=1.1.1",             # Match ngen-forcing
    "cartopy",
    "matplotlib",
    "pandas~=2.3.3",                # Match ngen-forcing
    "seaborn",
    "distributed",
    "pydantic",
    "numpy~=1.26.4",                # Match ngen-forcing
    "fastparquet",
    "shapely~=2.1.2",               # Match ngen-forcing
    "tenacity",
    # teehr 7a2b8da == tag v0.5.2
    "teehr @ git+https://github.com/RTIInternational/teehr@7a2b8da64bf12d074b7d7b44d6d5c89e9a66d8c5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/NGWPC/nwm-verf.git"

[tool.ruff]
line-length = 88  

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
