[metadata]
name = ngen.verf
version = attr: ngen.verf._version.__version__
author = Yuqiong Liu
author_email = Yuqiong.Liu@ertcorp.com
description = A python library to perform verification for NWM forecasts
long_description = file: README.md
long_description_content_type = text/markdown
license = USDOC
license_files = LICENSE
url = https://github.com/NGWPC/nwm-verf.git
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    = src
install_requires =
    dask
    geopandas
    cartopy
    matplotlib
    pandas
    seaborn
    distributed
    pydantic
    numpy<2
    fastparquet
    tenacity
    teehr @ git+https://github.com/RTIInternational/teehr@1204e014fd9e3b320d6ee5c8eea04efc524ce0a7

python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
    pytest-mock
